<resources>
    <string name="app_name">ConfApp</string>
    <string name="title_home">Home</string>
    <string name="title_news">News</string>
    <string name="title_conferences">Conferences</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_conference_speakers">ConferenceSpeakersActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ConfApp</string>
    <string name="nav_header_subtitle">support@confapp.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="menu_post_news_article">Post News</string>
    <string name="post">Post</string>
    <string name="post_article">Post Article</string>
    <string name="title">Title</string>
    <string name="type_message_here">Type Message here</string>
    <string name="link_optional">Link (Optional)</string>
    <string name="forget_password">Forget Password?</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_or_user_name">Email or User Name</string>
    <string name="or">OR</string>
    <string name="menu_register">Register</string>
    <string name="menu_approval">Abstracts Approvals</string>
    <string name="type_research_abstract_here">Type Research Abstract here</string>
    <string name="select_associated_conference">Select associated conference</string>
    <string name="select_role">Select appropriate role</string>
    <string name="select_registration_type">Select registration type</string>
    <string name="reject">Reject</string>
    <string name="approve">Approve</string>
    <string name="status">Status</string>
    <string name="abstract_theme">Abstract theme</string>
    <string name="abstract_topic">Abstract topic</string>
    <string name="abstract_body">Abstract body</string>
    <string name="research_proposal_title">Research proposal title</string>
    <string name="submitted_on_11_november_2022">submitted on : 11 November 2022</string>
    <string name="select_conference_theme">Select Conference Theme</string>
    <string name="select_your_co_authors">select your co-authors</string>
    <string name="news">News</string>
    <string name="create_conference">Create Conference</string>
    <string name="conference_theme">Conference Theme</string>
    <string name="conference_venue">Conference Venue</string>
    <string name="conference_date">Conference Date</string>
    <string name="conference_name">Conference Name</string>
    <string name="loading">Loading…</string>
    <string name="upload_abstract_instead">Upload abstract instead</string>
    <string name="approved_abstracts">Approved Abstracts</string>
    <string name="rejected_abstracts">Rejected Abstracts</string>
    <string name="history">History</string>
    <string name="are_you_a_author">Are you an Author?</string>
    <string name="attendee">Attendee</string>
    <string name="author">Author</string>
    <string name="is_abstract_no">No</string>
    <string name="is_abstract_yes">Yes</string>
    <string name="are_you_submitting_an_abstract">Are you submitting an abstract?</string>
    <string name="coauthor">CoAuthor</string>
    <string name="open_pdf">Open Pdf</string>
    <string name="back">Back</string>
    <string name="open_proof_of_payment">Proof of Payment</string>
    <string name="upload_proof_of_payment">Upload Proof of Payment</string>
    <string name="abstract_submission_fee">Abstract Submission Fee in Rands e.g (5000)</string>
    <string name="attendance_fee">Attendance Fee in Rands e.g (3500)</string>
    <string name="attendance_type">Attendance Type:</string>
    <string name="approved_attendence">Approved Attendence</string>
    <string name="rejected_attendence">Rejected Attendence</string>
</resources>