<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_approval_24"
            android:title="@string/menu_approval" />
        <item
            android:id="@+id/nav_att_approval"
            android:icon="@drawable/ic_baseline_approval_24"
            android:title="Attendance Approval" />
        <item
            android:id="@+id/nav_conferences"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_conferences" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_app_registration_24"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_post_add_24"
            android:title="@string/menu_post_news_article" />
        <item
            android:id="@+id/nav_addconf"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/create_conference" />
        <item
            android:id="@+id/nav_authnews"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_news" />
        <item android:title="@string/history">
            <menu>
                <item
                    android:id="@+id/nav_approved"
                    android:icon="@drawable/ic_baseline_check_circle_24"
                    android:title="@string/approved_abstracts" />
                <item
                    android:id="@+id/nav_attapproved"
                    android:icon="@drawable/ic_baseline_check_circle_24"
                    android:title="@string/approved_attendence" />
                <item
                    android:id="@+id/nav_rejected"
                    android:icon="@drawable/ic_baseline_cancel_24"
                    android:title="@string/rejected_abstracts" />
                <item
                    android:id="@+id/nav_attrejected"
                    android:icon="@drawable/ic_baseline_cancel_24"
                    android:title="@string/rejected_attendence" />
            </menu>
        </item>
    </group>
</menu>