<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ntobeko.confmanagement.ui.approvals.ApprovalsFragment"
        android:label="@string/menu_approval"
        tools:layout="@layout/fragment_approvals" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ntobeko.confmanagement.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.ntobeko.confmanagement.ui.postnewsarticle.PostNewsArticleFragment"
        android:label="@string/menu_post_news_article"
        tools:layout="@layout/fragment_postnewsarticle" />
</navigation>