<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abstract_theme"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/green"
                    android:text="@string/status"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:paddingBottom="2dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/abstract_topic"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>
                <TextView
                    android:id="@+id/authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text=""
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>
                <TextView
                    android:id="@+id/submissionDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/submitted_on_11_november_2022"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"/>
                <TextView
                    android:id="@+id/abstractBody"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/abstract_body"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    />

            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnApprove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    app:iconGravity="end"
                    app:icon="@drawable/ic_baseline_check_circle_24"
                    app:iconTint="@color/green"
                    android:text="@string/approve"
                    style="?attr/borderlessButtonStyle"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnReject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:iconGravity="end"
                    android:layout_marginStart="60dp"
                    app:icon="@drawable/ic_baseline_cancel_24"
                    app:iconTint="@color/red"
                    android:textColor="@color/red"
                    android:text="@string/reject"
                    style="?attr/borderlessButtonStyle"
                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>