<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/logInLayout"
                    android:padding="15dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtRegType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/are_you_a_author"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"/>

                    <RadioGroup
                        android:id="@+id/rgRegType"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbAttend"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/attendee"
                            android:layout_marginEnd="20dp"
                            android:checked="true"/>

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbAuthor"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/author" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbCoAuthor"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/coauthor" />

                    </RadioGroup>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/txtIsAbstractSubmission"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/are_you_submitting_an_abstract"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"/>

                    <RadioGroup
                        android:id="@+id/rgIsAbstractSubmission"
                        android:textSize="13sp"
                        android:textStyle="normal"
                        android:layout_width="match_parent"
                        android:visibility="gone"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbIsAbstractYes"
                            android:layout_height="match_parent"
                            android:layout_width="110dp"
                            android:layout_marginEnd="20dp"
                            android:checked="false"
                            android:text="@string/is_abstract_yes" />

                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/rbIsAbstractNo"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:text="@string/is_abstract_no"
                            android:checked="true"/>

                    </RadioGroup>




                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:id="@+id/drpDownConference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:hint="@string/select_associated_conference">

                        <AutoCompleteTextView
                            android:id="@+id/spinnerConference"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:inputType="none"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/uploadProofOfPayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="62dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="62dp"
                        android:text="@string/upload_proof_of_payment"
                        android:elevation="0dp"
                        android:gravity="center"
                        android:drawableStart="@drawable/ic_baseline_attach_file_24"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        app:backgroundTint="@color/grey"
                        app:shapeAppearanceOverlay="@style/Button5"/>

                    <TextView
                        android:id="@+id/hiddenConfIds"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="0dp"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />


                    <TextView
                        android:id="@+id/downloadProofOfPaymentUrl"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="0dp"
                        android:text=""
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutTitle"
                        android:hint="@string/research_proposal_title"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:hintTextColor="#4E4A4A"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:visibility="gone"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:inputType="textMultiLine"
                            android:id="@+id/researchTopic"
                            android:ems="10"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/TextInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="5dp"
                            android:visibility="gone"
                            android:hint="@string/select_conference_theme">

                            <AutoCompleteTextView
                                android:id="@+id/spinnerThemes"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="13sp"
                                android:textStyle="normal"
                                android:inputType="none"
                                tools:ignore="LabelFor" />

                        </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutAbstractBody"
                        android:hint="@string/type_research_abstract_here"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        app:shapeAppearanceOverlay="@style/Button4"
                        app:hintTextColor="#4E4A4A"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:visibility="gone"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/abstractBody"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textMultiLine"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/chooseFile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="62dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="62dp"
                        android:elevation="0dp"
                        android:gravity="center"
                        android:drawableStart="@drawable/ic_baseline_attach_file_24"
                        android:text="@string/upload_abstract_instead"
                        android:textAllCaps="false"
                        android:textColor="@color/textColor"
                        android:textSize="14sp"
                        app:backgroundTint="@color/grey"
                        android:visibility="gone"
                        app:shapeAppearanceOverlay="@style/Button5" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:id="@+id/layoutCoAuthors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:visibility="gone"
                        android:hint="@string/select_your_co_authors">

                        <AutoCompleteTextView
                            android:id="@+id/spinnerCoAuthors"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textStyle="normal"
                            android:inputType="none"
                            tools:ignore="LabelFor" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/register"
                    android:text="@string/menu_register"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:elevation="15dp"
                    android:gravity="center"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/textColor"
                    android:layout_gravity="center"
                    app:shapeAppearanceOverlay="@style/Button5"
                    app:backgroundTint="@color/pinkColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>