<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PdfViewerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            app:iconGravity="start"
            app:iconTint="@color/green" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnApprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="30dp"
            app:iconGravity="end"
            app:icon="@drawable/ic_baseline_check_circle_24"
            app:iconTint="@color/green"
            android:text="@string/approve"
            style="?attr/borderlessButtonStyle"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconGravity="end"
            android:layout_marginStart="30dp"
            app:icon="@drawable/ic_baseline_cancel_24"
            app:iconTint="@color/red"
            android:textColor="@color/red"
            android:text="@string/reject"
            style="?attr/borderlessButtonStyle"
            />
    </LinearLayout>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        tools:layout_editor_absoluteX="-8dp"
        tools:layout_editor_absoluteY="360dp" />
</androidx.constraintlayout.widget.ConstraintLayout>